--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.github.mohammadatif:CircularImageView:1.0.0'
 
+    implementation 'com.google.android.libraries.places:places:1.1.0'
+    implementation 'com.karumi:dexter:5.0.0'//related to Google places
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
