--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChangePassword"></activity>
+        <activity android:name=".ViewRequestsActivity"></activity>
+        <activity android:name=".ChangePassword" />
         <activity android:name=".UpdateProfile" />
         <activity android:name=".AddDonationActivity" />
         <activity android:name=".ProfileActivity" />
