--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewRequestsActivity"/>
         <activity android:name=".CreateEvent"></activity>
         <activity android:name=".ChangePassword" />
         <activity android:name=".UpdateProfile" />
