--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewRequestsActivity"/>
-        <activity android:name=".CreateEvent"></activity>
+        <activity android:name=".ForgotPassword"></activity>
+        <activity android:name=".ViewRequestsActivity" />
+        <activity android:name=".CreateEvent" />
         <activity android:name=".ChangePassword" />
         <activity android:name=".UpdateProfile" />
         <activity android:name=".AddDonationActivity" />
