--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ForgotPassword"></activity>
+        <activity android:name=".CommentsActivity"></activity>
+        <activity android:name=".ForgotPassword" />
         <activity android:name=".ViewRequestsActivity" />
         <activity android:name=".CreateEvent" />
         <activity android:name=".ChangePassword" />
