--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CommentsActivity"></activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".CommentsActivity" />
         <activity android:name=".ForgotPassword" />
         <activity android:name=".ViewRequestsActivity" />
         <activity android:name=".CreateEvent" />
         <activity android:name=".ChangePassword" />
         <activity android:name=".UpdateProfile" />
         <activity android:name=".AddDonationActivity" />
+        <activity android:name=".AddWishlistActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".Register" />
         <activity android:name=".Settings" />
