--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.donary">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -18,6 +19,7 @@
         <activity android:name=".CommentsActivity" />
         <activity android:name=".ForgotPassword" />
         <activity android:name=".ViewRequestsActivity" />
+        <activity android:name=".Fragment.Notification_fragment"/>
         <activity android:name=".CreateEvent" />
         <activity android:name=".ChangePassword" />
         <activity android:name=".UpdateProfile" />
